@@ -5,6 +5,7 @@ Changes in 1.4.6-stable:
  o Support multi-line HTTP headers; based on a patch from Moshe Litvin
  o Reject negative Content-Length headers; anonymous bug report
  o Detect CLOCK_MONOTONIC at runtime for evdns; anonymous bug report	
+ o Fix a bug where deleting signals with the kqueue backend would cause subsequent adds to fail
 
 Changes in 1.4.5-stable:
  o Fix connection keep-alive behavior for HTTP/1.0
